# sparkan

./: .directory  .gitignore  CMakeLists.txt  README.md
Tests/: CMakeLists.txt
Tests/RequestsTestApp/: CMakeLists.txt
Tests/RequestsTestApp/Source/: RequestsTestApp.cpp
Utils/: CMakeLists.txt
Utils/BlockingQueue/: CMakeLists.txt
Utils/BlockingQueue/API/BlockingQueue/: BlockingQueue.h  BlockingQueueFactory.h  QueueOperationStatusEnum.h
Utils/BlockingQueue/Include/: BlockingQueueFactory.h  NonblockingRecursiveLock.h  SizeLimitedBlockingQueue.h  SizeUnlimitedBlockingQueue.h
Utils/BlockingQueue/Source/: BlockingQueueFactory.cpp  NonblockingRecursiveLock.cpp
Utils/Requests/: CMakeLists.txt
Utils/Requests/API/Requests/: ForwardDeclarations.h  Handler.h  MethodEnum.h  ProtocolVersion.h  Request.h  RequestBuilder.h  Requests.h  Response.h
Utils/Requests/Include/: CurlDeliveredDataHandler.h  DeleteRequest.h  GetRequest.h  HandlerImpl.h  IncommingTask.h  MethodEnum.h  PostRequest.h  PutRequest.h  Request.h  RequestBuilderImpl.h  RequestExecutionContext.h  RequestExecutionStatus.h  RequestImpl.h  RequestWithContent.h  RequestsImpl.h  Response.h  ResponseBuilder.h  ResponseImpl.h
Utils/Requests/Source/: CurlDeliveredDataHandler.cpp  DeleteRequest.cpp  GetRequest.cpp  HandlerImpl.cpp  IncommingTask.cpp  RequestBuilder.cpp  RequestBuilderImpl.cpp  RequestExecutionContext.cpp  RequestImpl.cpp  Requests.cpp  RequestsImpl.cpp  ResponseBuilder.cpp  ResponseImpl.cpp
Utils/StringUtils/: CMakeLists.txt
Utils/StringUtils/Include/: StringUtils.h
Utils/StringUtils/Source/: StringUtils.cpp
Utils/ThreadPool/: CMakeLists.txt
Utils/ThreadPool/API/ThreadPool/: Task.h
Utils/ThreadPool/Include/: FixedThreadPool.h  ForwardDeclarations.h  ThreadPool.h  ThreadPoolFactory.h
Utils/ThreadPool/Source/: FixedThreadPool.cpp  ThreadPoolFactory.cpp
coreservice/: CMakeLists.txt
coreservice/include/: authenticator.h  browsercontrol.h  coreserviceimpl.h
coreservice/include/api/: browser.h  browsercontrol.h  coreservice.h  coreservice_global.h  oauth.h  tokenListener.h
coreservice/src/: authenticator.cpp  browser.cpp  browsercontrol.cpp  coreservice.cpp  coreserviceimpl.cpp
sparkan/: CMakeLists.txt
sparkan/include/: authlistener.h  cachedauthorization.h  mainwindow.h  people.h  person.h  room.h  rooms.h  system_main.h  token.h  webauth.h  webbrowser.h
sparkan/res/: AuthenticationWindow.qml  AvatarButton.qml  MenuButton.qml  SparkanMenu.qml  main.qml  qml.qrc  sparkan.qrc
sparkan/src/: authlistener.cpp  cachedauthorization.cpp  main.cpp  person.cpp  rooms.cpp  webauth.cpp  webbrowser.cpp
src/: .directory  CMakeLists.txt
src/Sparkan/: CMakeLists.txt
src/Utils/: .directory  CMakeLists.txt
src/Utils/BlockingQueue/: .directory  CMakeLists.txt
src/Utils/BlockingQueue/Include/: .directory  BlockingQueue.h  ForwardDeclarations.h  SizeLimitedBlockingQueue.h  SizeUnlimitedBlockingQueue.h
src/Utils/BlockingQueue/Source/: .directory  BlockingQueueFactory.cpp
src/Utils/Requests/: .directory  CMakeLists.txt
src/Utils/Requests/API/Requests/: .directory
src/Utils/Requests/Include/: .directory  CurlDeliveredDataHandler.h  ForwardDeclarations.h  RequestBuilderImpl.h  RequestImpl.h  RequestPerformer.h  Requests.h  RequestsFactory.h  RequestsImpl.h  ResponseImpl.h
src/Utils/Requests/Source/: .directory  CurlDeliveredDataHandler.cpp  PostRequest.cpp  PutRequest.cpp  RequestBuilder.cpp  RequestPerformer.cpp  RequestWithContent.cpp  Requests.cpp  RequestsFactory.cpp  RequestsImpl.cpp  ResponseBuilder.cpp  ResponseImpl.cpp
src/Utils/StringUtils/: .directory
src/Utils/ThreadPool/: .directory  CMakeLists.txt
src/Utils/ThreadPool/Include/: .directory  FixedThreadPool.h  ForwardDeclarations.h  ThreadPool.h  WorkerTerminated.h
src/Utils/ThreadPool/Source/: FixedThreadPool.cpp  ThreadPoolFactory.cpp
src/sparkan/: CMakeLists.txt  cachedauthorization.cpp  cachedauthorization.h  main.cpp  mainwindow.cpp  people.cpp  person.h  webauth.cpp  webauth.h
